RESOLVED FIXED298473
Revise frozen Safari UA iOS version to 18_6_2 (from 18_6) to match actual last-shipped iOS version
https://bugs.webkit.org/show_bug.cgi?id=298473
Summary Revise frozen Safari UA iOS version to 18_6_2 (from 18_6) to match actual las...
Brent Fulgham
Reported 2025-09-05 13:46:23 PDT
Safari had to freeze its reported iOS version in User Agent strings to 18.6 to avoid a large number of broken websites that could not recognize that 26 was a higher version number than 18. We decided that this will be a permanent change (as it has been in macOS for several years) since it removes some fingerprinting entropy. Safari version on iOS is a strong analog to iOS releases. Unfortunately, the decision to freeze iOS version at 18.6 did not account for two security updates that created an actual revision of 18.6.2. That should have been the revision we used. The original version freeze was done outside of the WebKit repository. That was incorrect -- we should have that logic in UserAgentIOS.mm. This patch corrects that as well. <rdar://problem/159955141>
Attachments
Brent Fulgham
Comment 1 2025-09-05 13:55:57 PDT
EWS
Comment 2 2025-09-09 11:43:35 PDT
Committed 299765@main (030bd59b89c4): <https://commits.webkit.org/299765@main> Reviewed commits have been landed. Closing PR #50383 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.