Revise frozen Safari UA iOS version to match actual last-shipped iOS version https://bugs.webkit.org/show_bug.cgi?id=298473 <rdar://159955141>

Reviewed by Matthieu Dubet.

Safari froze the iOS version number in it's UA string to address compatibility issues
encountered when we attempted to report iOS 26 versioning. That change was done in
an internal repository.

This change moves the iOS version freezing logic to Open Source, and corrects the
version to match that last iOS 18.6.2 patch level.

* Source/WebCore/page/Quirks.cpp:
(WebCore::Quirks::standardUserAgentWithApplicationNameIncludingCompatOverrides):

Canonical link: https://commits.webkit.org/299765@main